# gitcube-core

./: README.md  SOURCES.txt  ai_validator.py  analyze.py  baseline.py  cli.py  concept.md  demo_repo_generator.py  dna.py  entry_points.txt  ingest.py  metrics.md  metrics.py  pyproject.toml  quickstart.md  report.py  top_level.txt  yantra_bridge.py
.github/workflows/: gitcube.yml
gitcube/: cli.py  graph.py  metrics.py
tests/: test_metrics.py
