[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitcube-core"
version = "0.1.0"
description = "Structural Stability & Entropy Analyzer for Git Repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gitcube = "gitcube.cli:main"

[tool.setuptools]
packages = ["gitcube"]
